--- a/system/releasenotes.html
+++ b/system/releasenotes.html
@@ -1,5 +1,10 @@
-<html>
-<head></head>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Türkçe Uyumluluk</title>
+</head>
 <body>
     <ul>
         <li>Bir</li>
