--- a/system/releasenotes.html
+++ b/system/releasenotes.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Türkçe Uyumluluk</title>
-</head>
-<body>
-    <ul>
-        <li>Bir</li>
-        <li>İki</li>
-        <li>Üç</li>
-    </ul>
-</body>
-</html>
+Bir
+İki
+Üç
